--- a/.github/workflows/javabuild.yml
+++ b/.github/workflows/javabuild.yml
@@ -30,12 +30,16 @@ jobs:
 
         - name: jfrog setup
           uses: jfrog/setup-jfrog-cli@v3
+          with:
+            version: latest
           env:
             JFROG_URL: "https://trial6f8u6n.jfrog.io/"
             jfrog-cli-options: --interactive=false
           
         - name: Upload JAR to Jfrog
           run: |
+           ls -l
+           ls -la /target
            jf rt u "target/*.jar" "petclinic/" 
         - name: Run tests
           run: mvn test
