--- a/.github/workflows/javabuild.yml
+++ b/.github/workflows/javabuild.yml
@@ -49,3 +49,6 @@ jobs:
           with:
             name: test-results
             path: target/surefire-reports
+        - name: Upload test result  to Jfrog
+          run: jfrog rt u "target/surefire-reports/*.xml" "petclinic/"
+         
