made corrections to sonar.yml

--- a/.github/workflows/sonar.yml
+++ b/.github/workflows/sonar.yml
@@ -15,6 +15,9 @@ jobs:
           cache: 'maven'
       - name: Set up SonarCloud
         uses: SonarSource/sonarcloud-github-action@master
+      - name: checkout code
+        uses: actions/checkout@v4
+     
         # with:
         #   sonarCloudToken: ${{ secrets.SONAR_TOKEN }}
         #   projectKey: 'SakuraSher_DevSecops_Pipeline'  # Replace with your actual project key
