--- a/.github/workflows/sonar.yml
+++ b/.github/workflows/sonar.yml
@@ -13,16 +13,18 @@ jobs:
           java-version: '17'
           distribution: 'temurin'
           cache: 'maven'
-      - name: Set up SonarCloud
-        uses: SonarSource/sonarcloud-github-action@master
-      - name: checkout code
-        uses: actions/checkout@v4
-     
+      - name: Run SonarCloud analysis
+        run: |
+          mvn clean verify sonar:sonar 
+          -Dsonar.projectKey=SakuraSher_DevSecops_Pipeline 
+          -Dsonar.organization=sakurasher 
+          -Dsonar.host.url=https://sonarcloud.io 
+          -Dsonar.login=${{ secrets.SONAR_TOKEN }}
 
         #   projectKey: 'SakuraSher_DevSecops_Pipeline'  # Replace with your actual project key
-        #   organization: 'sakurasher'  # Replace with your actual organization    
+        #   organization: 'sakurasher'  # Replace with your actual organization
         #   hostUrl: 'https://sonarcloud.io'
-      - name: run SonarCloud analysis
-        run: mvn clean verify sonar:sonar -Dsonar.projectKey=SakuraSher_DevSecops_Pipeline -Dsonar.organization=sakurasher -Dsonar.host.url=https://sonarcloud.io -Dsonar.login=${{ secrets.SONAR_TOKEN }}
+    #   - name: run SonarCloud analysis
+    #     run: mvn clean verify sonar:sonar -Dsonar.projectKey=SakuraSher_DevSecops_Pipeline -Dsonar.organization=sakurasher -Dsonar.host.url=https://sonarcloud.io -Dsonar.login=${{ secrets.SONAR_TOKEN }}
 
 
