--- a/.github/workflows/sonar.yml
+++ b/.github/workflows/sonar.yml
@@ -17,6 +17,11 @@ jobs:
         uses: sonarsource/sonarqube-scan-action@v2
         with:
           projectBaseDir: '.'          
+          args: >
+            -Dsonar.projectKey=SakuraSher_DevSecops_Pipeline
+            -Dsonar.organization=DevSecops_Pipeline
+            -Dsonar.host.url=https://sonarcloud.io/
+            
         env:
           SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
           SONAR_HOST_URL: https://sonarcloud.io/
