--- a/.github/workflows/sonar.yml
+++ b/.github/workflows/sonar.yml
@@ -19,7 +19,7 @@ jobs:
           projectBaseDir: '.'          
           args: >
             -Dsonar.projectKey=SakuraSher_DevSecops_Pipeline
-            -Dsonar.organization=DevSecops_Pipeline
+            -Dsonar.organization=sakurasher
             -Dsonar.host.url=https://sonarcloud.io/
             
         env:
