--- a/.github/workflows/javabuild.yml
+++ b/.github/workflows/javabuild.yml
@@ -46,7 +46,7 @@ jobs:
           run: |
            ls -l
            ls -la ./target
-           jf rt u "target/*.jar" "petclinic/$TIMESTAMP" 
+           jf rt u "target/*.jar" "petclinic/$TIMESTAMP/app.jar" 
         - name: Run tests
           run: mvn test
         - name: Upload test results
